added auth and wip email verification

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ RUST_LOG=rest_api=info,actix=info
 HOST=127.0.0.1
 PORT=50
 DATABASE_URL=postgres://postgres:password@localhost/rest_api
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
