--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,8 @@ diesel_migrations = "1.4"
 lazy_static = "1.4"
 r2d2 = "0.8"
 uuid = { version = "0.6", features = ["serde", "v4"] }
+rand = "0.7"
+rust-argon2 = "0.5"
+actix-redis = { version = "0.8", features = ["web"] }
+actix-session = "0.3"
 
